# parallels_coursework

./: Cargo.toml  README.md  file2.txt  file3.txt  file4.txt
src/: cli.rs  index_builder.rs  main.rs
src/client/: main.rs
src/server/: benchmark.rs  cli.rs  index_builder.rs  main.rs  server.rs
