[package]
name = "course-work"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
threadpool = "1.8.1"
bimap = "0.6.2"
clap = { version = "4.0.32", features = ["derive"] }
walkdir = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.24", features = ["full"] }

[[bin]]
name = "index_server"
path = "src/server/main.rs"

[[bin]]
name = "index_client"
path = "src/client/main.rs"